# chip8-emulator-c

./: CMakeLists.txt  decode.c  decode.h  display.c  display.h  main.c  memory.c  memory.h
